--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "electron": "^40.0.0",
-    "electron-builder": "^26.4.0",
+    "electron-builder": "^26.7.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "png-to-ico": "^3.0.1",
     "vite": "npm:rolldown-vite@7.2.5"
   },
   "overrides": {
@@ -41,12 +42,14 @@
     },
     "files": [
       "dist/**/*",
+      "public/icon.png",
       "electron-main.cjs",
       "electron-preload.cjs",
       "package.json"
     ],
     "win": {
-      "target": "portable"
+      "target": "portable",
+      "icon": "public/icon.png"
     }
   }
 }
